k8s/resources.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-web-app
spec:
  type: LoadBalancer
  selector:
    app: sample-web-app
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-app
  labels:
    app: sample-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-web-app
  template:
    metadata:
      labels:
        app: sample-web-app
    spec:
      containers:
      - name: sample-web-app
        image: $GOOGLE_APPLICATION_REGION-docker.pkg.dev/$GOOGLE_PROJECT/$GOOGLE_ARTIFACT_REGISTRY/$IMAGE_NAME:$GITHUB_SHA
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
