k8s/container-registry-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg, "details": {"rejected_container": container.image}}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, "us-east1-docker.pkg.dev/cmpe58e-term-project/cmpe58e-docker-registry/")
          msg := "This container does not use an allowed registry"
        }
